--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
         <a href="./Tailwind/public/index.html" target="_blank">
             <h1>FlexLayout2 Tailwindcss</h1>
         </a>
+
+        <a href="./Tailwind2/public/index.html" target="_blank">
+            <h1>Eco Hotel</h1>
+        </a>
         <a href="./FormValidation/index.html" target="_blank">
             <h1>Form Validation</h1>
         </a>
