--- a/Tailwind2/public/index.html
+++ b/Tailwind2/public/index.html
@@ -9,6 +9,7 @@
     <script src="https://kit.fontawesome.com/d81501edd7.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <script src="https://kit.fontawesome.com/d81501edd7.js" crossorigin="anonymous"></script>
     <link
         href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
@@ -17,40 +18,70 @@
 <body>
     <!-- Big screen headers -->
     <div class="head1 hidden md:block">
-        <div class="bigheader bg-header flex flex-col gap-5  w-full py-2 ">
+        <div class="bigheader bg-header flex flex-col gap-5  w-full py-1 ">
             <div>
                 <div class="first w-full  bg-header flex justify-between lg:px-12 px-8   items-center">
 
                     <div class="list1 deligate  flex justify-between  w-[56%] gap-1   items-center ">
-                        <span class="firstt line1">
-                            <p class="">EKO GARDENS</p><svg xmlns="http://www.w3.org/2000/svg" fill="none"
-                                viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6 sizz">
+                        <span class="firstt ">
+                            <p class="line1">EKO GARDENS</p><svg xmlns="http://www.w3.org/2000/svg" fill="none"
+                                viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6 line1">
                                 <path stroke-linecap="round" stroke-linejoin="round" d="m19.5 8.25-7.5 7.5-7.5-7.5" />
                             </svg>
+                            <span class="next absolute top-10 left-[56px] z-40 bg-header hidden p-4  ">
+                                <div class="next2 flex flex-col gap-4 justify-center ">
+                                    <p>EKO GAURDING STANDARD</p>
+                                    <p>EKO GAURDING CLASSIC</p>
+                                </div>
+                            </span>
+                        </span>
+                        <span class="firstt">
+                            <p class=" line1">EKO HOTEL</p><svg xmlns="http://www.w3.org/2000/svg" fill="none"
+                                viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6 line1">
+                                <path stroke-linecap="round" stroke-linejoin="round" d="m19.5 8.25-7.5 7.5-7.5-7.5" />
+                            </svg>
+                            <span class="next absolute top-10 left-[204px] z-40 bg-header hidden  p-4 w-[250px]  ">
+                                <div class="next2 flex flex-col gap-7 justify-center ">
+                                    <p>EKO CLASSIC SUPERIOR</p>
+                                    <p>EKO ATLANTIC SUPERIRO</p>
+                                    <p>CLASSIC SUITE</p>
+                                    <p>DIPLOMATIC SUITE</p>
+                                    <p>PRESCIDENTIAL SUITE</p>
+                                </div>
+                            </span>
+                        </span>
+                        <span class="firstt ">
+                            <p class="line1">EKO SUITES</p><svg xmlns="http://www.w3.org/2000/svg" fill="none"
+                                viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6 line1">
+                                <path stroke-linecap="round" stroke-linejoin="round" d="m19.5 8.25-7.5 7.5-7.5-7.5" />
+                            </svg>
+
+                            <span class="next absolute top-10 left-[328px] z-40 bg-header hidden  p-4 w-[176px]  ">
+                                <div class="next2 flex flex-col gap-4 justify-center ">
+                                    <p>DELUXE ROOM</p>
+                                    <p>STUDIO SUITE</p>
+                                    <p>EXECUTIVE SUITE</p>
+                                </div>
+                            </span>
+                        </span>
+                        <span class="firstt ">
+                            <p class="line1">EKO SIGNATURE</p><svg xmlns="http://www.w3.org/2000/svg" fill="none"
+                                viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6 line1">
+                                <path stroke-linecap="round" stroke-linejoin="round" d="m19.5 8.25-7.5 7.5-7.5-7.5" />
+                            </svg>
+
+                            <span class="next absolute top-10 left-[456px] z-40 bg-header hidden  p-4 w-[270px]  ">
+                                <div class="next2 flex flex-col gap-7 justify-center ">
+                                    <p>EKO CLASSIC SUPERIOR</p>
+                                    <p>EKO ATLANTIC SUPERIRO</p>
+                                    <p>CLASSIC SUITE</p>
+                                    <p>DIPLOMATIC SUITE</p>
+                                    <p>PRESCIDENTIAL SUITE</p>
+                                </div>
+                            </span>
                         </span>
                         <span class="firstt line1">
-                            <p class="">EKO HOTEL</p><svg xmlns="http://www.w3.org/2000/svg" fill="none"
-                                viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
-                                <path stroke-linecap="round" stroke-linejoin="round" d="m19.5 8.25-7.5 7.5-7.5-7.5" />
-                            </svg>
-                        </span>
-                        <span class="firstt line1">
-                            <p class="">EKO SUITES</p><svg xmlns="http://www.w3.org/2000/svg" fill="none"
-                                viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
-                                <path stroke-linecap="round" stroke-linejoin="round" d="m19.5 8.25-7.5 7.5-7.5-7.5" />
-                            </svg>
-                        </span>
-                        <span class="firstt line1">
-                            <p class="">EKO SIGNATURE</p><svg xmlns="http://www.w3.org/2000/svg" fill="none"
-                                viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
-                                <path stroke-linecap="round" stroke-linejoin="round" d="m19.5 8.25-7.5 7.5-7.5-7.5" />
-                            </svg>
-                        </span>
-                        <span class="firstt line1">
-                            <p class="">Eko Tower II</p><svg xmlns="http://www.w3.org/2000/svg" fill="none"
-                                viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
-                                <path stroke-linecap="round" stroke-linejoin="round" d="m19.5 8.25-7.5 7.5-7.5-7.5" />
-                            </svg>
+                            <p class="">Eko Tower II</p>
                         </span>
                     </div>
                     <div class="flex w-[40%] gap-1 lg:gap-0 justify-between ">
@@ -170,6 +201,8 @@
         </div>
     </div>
 
+
+
     <!-- small screen headers needes edit -->
     <div class="head1 block md:hidden ">
         <div class="bigheader bg-red-900 flex flex-col gap-5  w-full py-2 ">
@@ -228,7 +261,7 @@
             </div>
         </div>
         <div class="sec flex justify-between gap-8 sticky top-0 w-full   bg-header items-center px-12 ">
-            <div class="flex w-[38%] justify-start gap-5 ">
+            <div class="flex w-[38%] justify-start gap-5 tryy ">
 
 
                 <span class="spann1">
@@ -323,19 +356,29 @@
 
             </div>
         </div>
-    </div> 
+    </div>
 
 
 
 
 
 
-    <div class="banner1  h-[100vh] bg-[url('./images/eko1.jpg')] bg-cover bg-center">
+    <div
+        class="banner1 Hero  transition-all ease-in-out duration-700  h-[100vh] bg-[url('./images/eko1.jpg')] bg-cover bg-center">
+
+        <span class="arrows arrLeft absolute top-[408px] left-[23px]">
+            <i class="fa-solid fa-arrow-left"></i>
+        </span>
+
+        <span class="arrows arrRight absolute top-[408px] right-[23px]"">
+            <i class=" fa-solid fa-arrow-right arrow"></i>
+        </span>
+
     </div>
     <br>
 
 
-<script src=""></script>
+    <script src="index.js"></script>
 </body>
 
 </html>
