fixed the sec div to be sticky

--- a/Tailwind2/public/index.html
+++ b/Tailwind2/public/index.html
@@ -17,8 +17,8 @@
 
 <body>
     <!-- Big screen headers -->
-    <div class="head1 hidden md:block">
-        <div class="bigheader bg-header flex flex-col gap-5  w-full py-1 ">
+    
+        <div class="bigheader bg-header hidden md:block  w-full py-1 ">
             <div>
                 <div class="first w-full  bg-header flex justify-between lg:px-12 px-8   items-center">
 
@@ -199,7 +199,7 @@
 
             </div>
         </div>
-    </div>
+    
 
 
 
