added banner 3 and its content

--- a/Tailwind2/public/index.html
+++ b/Tailwind2/public/index.html
@@ -13,6 +13,11 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -25,10 +30,7 @@
                 <div class="list1 deligate  flex justify-between  w-[56%] gap-1   items-center ">
                     <span class="firstt ">
                         <p class="line1">EKO GARDENS</p>
-                        <!-- <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                            stroke="currentColor" class="size-6 line1">
-                            <path stroke-linecap="round" stroke-linejoin="round" d="m19.5 8.25-7.5 7.5-7.5-7.5" />
-                        </svg> -->
+
                         <span class="svg">
                             <i class="fa-solid fa-chevron-down"></i>
                         </span>
@@ -39,12 +41,11 @@
                             </div>
                         </span>
                     </span>
+
+
+                    <!--  -->
                     <span class="firstt">
                         <p class=" line1">EKO HOTEL</p>
-                        <!-- <svg xmlns="http://www.w3.org/2000/svg" fill="none"
-                            viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6 line1">
-                            <path stroke-linecap="round" stroke-linejoin="round" d="m19.5 8.25-7.5 7.5-7.5-7.5" />
-                        </svg> -->
 
                         <span class="svg">
                             <i class="fa-solid fa-chevron-down"></i>
@@ -59,6 +60,8 @@
                             </div>
                         </span>
                     </span>
+
+                    <!--  -->
                     <span class="firstt ">
                         <p class="line1">EKO SUITES</p>
                         <!-- <svg xmlns="http://www.w3.org/2000/svg" fill="none"
@@ -100,6 +103,15 @@
                         <p class="">Eko Tower II</p>
                     </span>
                 </div>
+
+
+
+
+
+
+
+
+
                 <div class="flex w-[40%] gap-1 lg:gap-0 justify-between ">
                     <div class="flex justify-start items-center  w-3/4   gap-4">
                         <a href="#" class="first2  text-center">The Company</a>
@@ -125,10 +137,15 @@
 
             <span class="spann1">
                 <label class="firstt san line1">
-                    <p class="">HOME</p><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                    <p class="">HOME</p>
+                    <!-- <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
                         stroke-width="1.5" stroke="currentColor" class="size-6">
                         <path stroke-linecap="round" stroke-linejoin="round" d="m19.5 8.25-7.5 7.5-7.5-7.5" />
-                    </svg>
+                    </svg> -->
+                    <span class="svg ">
+                        <i class="fa-solid fa-chevron-down"></i>
+                    </span>
+
                 </label>
                 <span class=" test num1  h-[100px] absolute flex flex-col  px-6  items-start bg-header  ">
                     <p class="para"><a href="#">ABOUT US</a></p>
@@ -145,10 +162,14 @@
 
             <span class="spann2">
                 <label class="firstt san line1">
-                    <p class="">MEETING & BANQUETTING</p><svg xmlns="http://www.w3.org/2000/svg" fill="none"
+                    <p class="">MEETING & BANQUETTING</p>
+                    <!-- <svg xmlns="http://www.w3.org/2000/svg" fill="none"
                         viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
                         <path stroke-linecap="round" stroke-linejoin="round" d="m19.5 8.25-7.5 7.5-7.5-7.5" />
-                    </svg>
+                    </svg> -->
+                    <span class="svg ">
+                        <i class="fa-solid fa-chevron-down"></i>
+                    </span>
                 </label>
                 <span class=" test num2 absolute flex flex-col  px-6 items-start bg-header   h-[200px]">
                     <p class="para"><a href="#">GRAND BALL ROOM</a></p>
@@ -171,10 +192,14 @@
 
             <span class="spann3">
                 <label class="firstt san line1">
-                    <p class="">RECREATIONAL SERVICE</p><svg xmlns="http://www.w3.org/2000/svg" fill="none"
+                    <p class="">RECREATIONAL SERVICE</p>
+                    <!-- <svg xmlns="http://www.w3.org/2000/svg" fill="none"
                         viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
                         <path stroke-linecap="round" stroke-linejoin="round" d="m19.5 8.25-7.5 7.5-7.5-7.5" />
-                    </svg>
+                    </svg> -->
+                    <span class="svg ">
+                        <i class="fa-solid fa-chevron-down"></i>
+                    </span>
                 </label>
                 <span class=" test num3 absolute flex flex-col  px-6 items-start bg-header   h-[250px]">
                     <p class="para"><a href="#">SWIMMING POOL</a></p>
@@ -194,10 +219,14 @@
 
             <span class="spann4">
                 <label class="firstt san line1">
-                    <p class="">EVENTS</p><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                    <p class="">EVENTS</p>
+                    <!-- <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
                         stroke-width="1.5" stroke="currentColor" class="size-6">
                         <path stroke-linecap="round" stroke-linejoin="round" d="m19.5 8.25-7.5 7.5-7.5-7.5" />
-                    </svg>
+                    </svg> -->
+                    <span class="svg ">
+                        <i class="fa-solid fa-chevron-down"></i>
+                    </span>
                 </label>
                 <span class=" test num4 absolute right-28 flex flex-col  px-6 items-start bg-header w-80  h-[250px]">
                     <p class="para"><a href="#">TROPICAL CHRISTMAS WONDERLAND</a></p>
@@ -391,10 +420,90 @@
 
     </div>
 
-    <div class="banner3  bg-banner3 h-44 w-full">
-        <p>dhdhd</p>
-    </div>
+    <div class="banner3  bg-banner3  w-full">
+        <div class="bechild  flex justify-around p-10 items-center ">
 
+            <div class="arriv  ">
+                <div class="child">
+                    <p class="pikin1">
+
+                        ARRIVAL DATE
+                    </p>
+                    <p class="pikin2">
+                        Arrival Date
+
+                    </p>
+                </div>
+
+            </div>
+
+            <div class="arriv ">
+                <div class="child">
+                    <p class="pikin1">
+
+                        DEPARTURE DATE
+                    </p>
+                    <p class="pikin2">
+                        Dept Date
+                    </p>
+                </div>
+
+            </div>
+
+            <div class="arriv  j">
+                <div class="child">
+                    <p class="pikin1">
+                        ADULTS
+
+                    </p>
+                    <p class="pikin2">
+                        <span>Choose Adult</span>
+                        <span class="text-white text-[16px]"><i class="fa-solid fa-chevron-down"></i></span>
+                    </p>
+                </div>
+
+            </div>
+
+
+            <div class="arriv ">
+
+                <div class="child">
+                    <p class="pikin1">
+                        CHILDREN
+
+                    </p>
+                    <p class="pikin2">
+                        <span>0Child</span>
+                        <span class="text-white text-[16px]"><i class="fa-solid fa-chevron-down"></i></span>
+                    </p>
+                </div>
+
+            </div>
+
+        </div>
+        <div class="avalability mt-10 flex justify-center items-center">
+            <span class="px-10 py-4 bg-headerBtnText text-white hover:text-black">
+                CHECK AVALABILITY
+            </span>
+        </div>
+    </div>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
 
     <script src="index.js"></script>
 </body>
