more toggle text to input

--- a/Tailwind2/public/index.html
+++ b/Tailwind2/public/index.html
@@ -420,90 +420,93 @@
 
     </div>
 
-    <div class="banner3  bg-banner3  w-full">
-        <div class="bechild  flex justify-around p-10 items-center ">
+    <div class="banner3  bg-banner3  w-full py-[50px]">
+        <div class="flex flex-col  gap-12 pt-2">
+            <div class="bechild  flex justify-around px-10 items-center ">
 
-            <div class="arriv  ">
-                <div class="child">
-                    <p class="pikin1">
+                <div class="arriv  ">
+                    <div class="child">
+                        <p class="pikin1">
 
-                        ARRIVAL DATE
-                    </p>
-                    <p class="pikin2">
-                        Arrival Date
+                            ARRIVAL DATE
+                        </p>
+                        <p class="pikin2" id="arrivalText">
+                            Arrival Date
 
-                    </p>
+                        </p>
+                    </div>
+
+                </div>
+
+                <div class="arriv ">
+                    <div class="child">
+                        <p class="pikin1">
+
+                            DEPARTURE DATE
+                        </p>
+                        <p class="pikin2">
+                            Dept Date
+                        </p>
+                    </div>
+
+                </div>
+
+                <div class="arriv  j">
+                    <div class="child">
+                        <p class="pikin1">
+                            ADULTS
+
+                        </p>
+                        <p class="pikin2 ">
+                            <span class="text-white">Choose Adult</span>
+                            <span class="text-white  text-[16px]"><i class="fa-solid fa-chevron-down"></i></span>
+                        </p>
+                    </div>
+
+                </div>
+
+
+                <div class="arriv ">
+
+                    <div class="child">
+                        <p class="pikin1">
+                            CHILDREN
+
+                        </p>
+                        <p class="pikin2 ">
+                            <span class="text-white ">0Child</span>
+                            <span class=" text-white text-[16px]"><i class="fa-solid fa-chevron-down"></i></span>
+                        </p>
+                    </div>
+
                 </div>
 
             </div>
-
-            <div class="arriv ">
-                <div class="child">
-                    <p class="pikin1">
-
-                        DEPARTURE DATE
-                    </p>
-                    <p class="pikin2">
-                        Dept Date
-                    </p>
-                </div>
-
+            <div class="avalability flex justify-center pb-5 items-center">
+                <span
+                    class=" checkk px-9 py-4 bg-headerBtnText text-white hover:text-black transition ease-in-out duration-700">
+                    CHECK AVALABILITY
+                </span>
             </div>
-
-            <div class="arriv  j">
-                <div class="child">
-                    <p class="pikin1">
-                        ADULTS
-
-                    </p>
-                    <p class="pikin2">
-                        <span>Choose Adult</span>
-                        <span class="text-white text-[16px]"><i class="fa-solid fa-chevron-down"></i></span>
-                    </p>
-                </div>
-
-            </div>
-
-
-            <div class="arriv ">
-
-                <div class="child">
-                    <p class="pikin1">
-                        CHILDREN
-
-                    </p>
-                    <p class="pikin2">
-                        <span>0Child</span>
-                        <span class="text-white text-[16px]"><i class="fa-solid fa-chevron-down"></i></span>
-                    </p>
-                </div>
-
-            </div>
-
-        </div>
-        <div class="avalability mt-10 flex justify-center items-center">
-            <span class="px-10 py-4 bg-headerBtnText text-white hover:text-black">
-                CHECK AVALABILITY
-            </span>
         </div>
     </div>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
 
     <script src="index.js"></script>
 </body>
