--- a/Tailwind2/public/index.html
+++ b/Tailwind2/public/index.html
@@ -494,6 +494,9 @@
     <br>
     <br>
     <br>
+    <div class="flex justify-center items-center">
+        <h1 class="text-5xl text-center ">Moore de come. Make i rest small abeg🥱</h1>
+    </div>
     <br>
     <br>
     <br>
