increase text weight

--- a/Tailwind2/public/index.html
+++ b/Tailwind2/public/index.html
@@ -494,7 +494,7 @@
     <br>
     <br>
     <br>
-    <div class="flex justify-center items-center">
+    <div class="flex text-5xl  justify-center items-center">
         <h1 class="text-5xl text-center ">Moore de come. Make i rest small abeg🥱</h1>
     </div>
     <br>
