--- a/Tailwind2/public/index.html
+++ b/Tailwind2/public/index.html
@@ -131,189 +131,22 @@
             <hr class="m-1">
         </div>
     </div>
-    <div class="sec flex justify-between gap-8 sticky top-0 w-full   bg-header items-center lg:px-12 px-8 ">
-        <div class="flex w-[38%] justify-start gap-5 ">
-
-
-            <span class="spann1">
-                <label class="firstt san line1">
-                    <p class="">HOME</p>
-                    <!-- <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
-                        stroke-width="1.5" stroke="currentColor" class="size-6">
-                        <path stroke-linecap="round" stroke-linejoin="round" d="m19.5 8.25-7.5 7.5-7.5-7.5" />
-                    </svg> -->
-                    <span class="svg ">
-                        <i class="fa-solid fa-chevron-down"></i>
-                    </span>
-
-                </label>
-                <span class=" test num1  h-[100px] absolute flex flex-col  px-6  items-start bg-header  ">
-                    <p class="para"><a href="#">ABOUT US</a></p>
-                    <p class="para"><a href="#">CONTACT US</a></p>
-
-                </span>
-            </span>
-
-            <span class="flex p-2 san line1 justify-center items-center">
-                <p class="line1">DINNING</p>
-
-            </span>
-
-
-            <span class="spann2">
-                <label class="firstt san line1">
-                    <p class="">MEETING & BANQUETTING</p>
-                    <!-- <svg xmlns="http://www.w3.org/2000/svg" fill="none"
-                        viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
-                        <path stroke-linecap="round" stroke-linejoin="round" d="m19.5 8.25-7.5 7.5-7.5-7.5" />
-                    </svg> -->
-                    <span class="svg ">
-                        <i class="fa-solid fa-chevron-down"></i>
-                    </span>
-                </label>
-                <span class=" test num2 absolute flex flex-col  px-6 items-start bg-header   h-[200px]">
-                    <p class="para"><a href="#">GRAND BALL ROOM</a></p>
-                    <p class="para"><a href="#">EKO CONVENTION CENTRE</a></p>
-                    <p class="para"><a href="#">FANTASIA</a></p>
-                    <p class="para"><a href="#">MEETING ROOM</a></p>
-                </span>
-            </span>
-
-
-        </div>
-
-        <div class=" w-[20%] h-10  flex justify-center items-center  ">
-            <a href="#" class="logo w-full   bg-[url('./images/logo-imgg.jpg')] h-14 bg-cover bg-center"></a>
-
-        </div>
-
-        <div class="flex w-[40%] gap-6 justify-center   ">
-
-
-            <span class="spann3">
-                <label class="firstt san line1">
-                    <p class="">RECREATIONAL SERVICE</p>
-                    <!-- <svg xmlns="http://www.w3.org/2000/svg" fill="none"
-                        viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
-                        <path stroke-linecap="round" stroke-linejoin="round" d="m19.5 8.25-7.5 7.5-7.5-7.5" />
-                    </svg> -->
-                    <span class="svg ">
-                        <i class="fa-solid fa-chevron-down"></i>
-                    </span>
-                </label>
-                <span class=" test num3 absolute flex flex-col  px-6 items-start bg-header   h-[250px]">
-                    <p class="para"><a href="#">SWIMMING POOL</a></p>
-                    <p class="para"><a href="#">GYM</a></p>
-                    <p class="para"><a href="#">TENNIS COURT</a></p>
-                    <p class="para"><a href="#">SPA</a></p>
-                    <p class="para"><a href="#">SALOON & NAIL STUDIO</a></p>
-                </span>
-            </span>
-
-
-
-
-
-
-
-
-            <span class="spann4">
-                <label class="firstt san line1">
-                    <p class="">EVENTS</p>
-                    <!-- <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
-                        stroke-width="1.5" stroke="currentColor" class="size-6">
-                        <path stroke-linecap="round" stroke-linejoin="round" d="m19.5 8.25-7.5 7.5-7.5-7.5" />
-                    </svg> -->
-                    <span class="svg ">
-                        <i class="fa-solid fa-chevron-down"></i>
-                    </span>
-                </label>
-                <span class=" test num4 absolute right-28 flex flex-col  px-6 items-start bg-header w-80  h-[250px]">
-                    <p class="para"><a href="#">TROPICAL CHRISTMAS WONDERLAND</a></p>
-                    <p class="para"><a href="#">GYM</a></p>
-                    <p class="para"><a href="#">HIPPITY HOPPITY EASTER</a></p>
-                    <p class="para"><a href="#">HAUTE TABLE</a></p>
-                    <p class="para"><a href="#">INTIMATE CELEBRATIONS</a></p>
-                </span>
-            </span>
-
-            <span class="flex p-2 san justify-center items-center line1">
-                <p class="">GALLERY</p>
-            </span>
-
-        </div>
-    </div>
-
-
-
-
-    <!-- small screen headers needes edit -->
-    <div class="head1 block md:hidden ">
-        <div class="bigheader bg-red-900 flex flex-col gap-5  w-full py-2 ">
-            <div>
-                <div class="first w-full  bg-header flex justify-between px-12   items-center">
-
-                    <div class="list1  flex justify-between  w-[56%] gap-1   items-center ">
-                        <span class="firstt line1">
-                            <p class="">EKO GARDENS</p><svg xmlns="http://www.w3.org/2000/svg" fill="none"
-                                viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
-                                <path stroke-linecap="round" stroke-linejoin="round" d="m19.5 8.25-7.5 7.5-7.5-7.5" />
-                            </svg>
-                        </span>
-                        <span class="firstt line1">
-                            <p class="">EKO HOTEL</p><svg xmlns="http://www.w3.org/2000/svg" fill="none"
-                                viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
-                                <path stroke-linecap="round" stroke-linejoin="round" d="m19.5 8.25-7.5 7.5-7.5-7.5" />
-                            </svg>
-                        </span>
-                        <span class="firstt line1">
-                            <p class="">EKO SUITES</p><svg xmlns="http://www.w3.org/2000/svg" fill="none"
-                                viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
-                                <path stroke-linecap="round" stroke-linejoin="round" d="m19.5 8.25-7.5 7.5-7.5-7.5" />
-                            </svg>
-                        </span>
-                        <span class="firstt line1">
-                            <p class="">EKO SIGNATURE</p><svg xmlns="http://www.w3.org/2000/svg" fill="none"
-                                viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
-                                <path stroke-linecap="round" stroke-linejoin="round" d="m19.5 8.25-7.5 7.5-7.5-7.5" />
-                            </svg>
-                        </span>
-                        <span class="firstt line1">
-                            <p class="">Eko Tower II</p><svg xmlns="http://www.w3.org/2000/svg" fill="none"
-                                viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
-                                <path stroke-linecap="round" stroke-linejoin="round" d="m19.5 8.25-7.5 7.5-7.5-7.5" />
-                            </svg>
-                        </span>
-                    </div>
-                    <div class="flex w-[40%]  justify-between ">
-                        <div class="flex justify-start items-center  w-3/4   gap-4">
-                            <a href="#" class="first2  text-center">The Company</a>
-                            <a href="#" class="first2  text-center" 2>Special Offers</a>
-                        </div>
-
-                        <div class="flex justify-center items-center w-1/2  gap-5">
-                            <span class="first3"><i class="fa-brands fa-twitter"></i></span>
-                            <span class="first3"><i class="fa-brands fa-facebook"></i></span>
-                            <span class="first3"><i class="fa-brands fa-square-instagram"></i></span>
-                            <span class="first3"><i class="fa-brands fa-pinterest"></i></span>
-
-                        </div>
-                    </div>
-                </div>
-
-                <hr class="m-1">
-            </div>
-        </div>
-        <div class="sec flex justify-between gap-8 sticky top-0 w-full   bg-header items-center px-12 ">
-            <div class="flex w-[38%] justify-start gap-5 tryy ">
+    <div class=" sticky top-0 hidden md:block ">
+        <div class="sec flex justify-between gap-8  w-full   bg-header items-center lg:px-12 px-8 ">
+            <div class="flex w-[38%] justify-start gap-5 ">
 
 
                 <span class="spann1">
                     <label class="firstt san line1">
-                        <p class="">HOME</p><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                        <p class="">HOME</p>
+                        <!-- <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
                             stroke-width="1.5" stroke="currentColor" class="size-6">
                             <path stroke-linecap="round" stroke-linejoin="round" d="m19.5 8.25-7.5 7.5-7.5-7.5" />
-                        </svg>
+                        </svg> -->
+                        <span class="svg ">
+                            <i class="fa-solid fa-chevron-down"></i>
+                        </span>
+
                     </label>
                     <span class=" test num1  h-[100px] absolute flex flex-col  px-6  items-start bg-header  ">
                         <p class="para"><a href="#">ABOUT US</a></p>
@@ -330,10 +163,14 @@
 
                 <span class="spann2">
                     <label class="firstt san line1">
-                        <p class="">MEETING & BANQUETTING</p><svg xmlns="http://www.w3.org/2000/svg" fill="none"
+                        <p class="">MEETING & BANQUETTING</p>
+                        <!-- <svg xmlns="http://www.w3.org/2000/svg" fill="none"
                             viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
                             <path stroke-linecap="round" stroke-linejoin="round" d="m19.5 8.25-7.5 7.5-7.5-7.5" />
-                        </svg>
+                        </svg> -->
+                        <span class="svg ">
+                            <i class="fa-solid fa-chevron-down"></i>
+                        </span>
                     </label>
                     <span class=" test num2 absolute flex flex-col  px-6 items-start bg-header   h-[200px]">
                         <p class="para"><a href="#">GRAND BALL ROOM</a></p>
@@ -356,10 +193,14 @@
 
                 <span class="spann3">
                     <label class="firstt san line1">
-                        <p class="">RECREATIONAL SERVICE</p><svg xmlns="http://www.w3.org/2000/svg" fill="none"
+                        <p class="">RECREATIONAL SERVICE</p>
+                        <!-- <svg xmlns="http://www.w3.org/2000/svg" fill="none"
                             viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
                             <path stroke-linecap="round" stroke-linejoin="round" d="m19.5 8.25-7.5 7.5-7.5-7.5" />
-                        </svg>
+                        </svg> -->
+                        <span class="svg ">
+                            <i class="fa-solid fa-chevron-down"></i>
+                        </span>
                     </label>
                     <span class=" test num3 absolute flex flex-col  px-6 items-start bg-header   h-[250px]">
                         <p class="para"><a href="#">SWIMMING POOL</a></p>
@@ -379,10 +220,14 @@
 
                 <span class="spann4">
                     <label class="firstt san line1">
-                        <p class="">EVENTS</p><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                        <p class="">EVENTS</p>
+                        <!-- <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
                             stroke-width="1.5" stroke="currentColor" class="size-6">
                             <path stroke-linecap="round" stroke-linejoin="round" d="m19.5 8.25-7.5 7.5-7.5-7.5" />
-                        </svg>
+                        </svg> -->
+                        <span class="svg ">
+                            <i class="fa-solid fa-chevron-down"></i>
+                        </span>
                     </label>
                     <span
                         class=" test num4 absolute right-28 flex flex-col  px-6 items-start bg-header w-80  h-[250px]">
@@ -400,7 +245,173 @@
 
             </div>
         </div>
+
     </div>
+
+
+    <!-- small screen headers needes edit -->
+    <div class="head1 block md:hidden ">
+        <div class="bigheader  flex flex-col gap-5  w-full py-2 ">
+            <div>
+                <div class="first w-full  bg-header flex justify-between px-4   items-center">
+                    <span class="firstt gap-1">
+                        <p class=" line1 text-[15px]">Our Hotel</p>
+
+                        <span class="svg">
+                            <i class="fa-solid fa-chevron-down"></i>
+                        </span>
+                        <span class="next absolute top-10 left-[204px] z-40 bg-header hidden  p-4 w-[250px]  ">
+                            <div class="next2 flex flex-col gap-7 justify-center ">
+                                <p>EKO CLASSIC SUPERIOR</p>
+                                <p>EKO ATLANTIC SUPERIRO</p>
+                                <p>CLASSIC SUITE</p>
+                                <p>DIPLOMATIC SUITE</p>
+                                <p>PRESCIDENTIAL SUITE</p>
+                            </div>
+                        </span>
+                    </span>
+
+                    <a href="#"
+                        class=" bg-headerBtnText text-[17px]  font-semibold  py-[2px] text-white px-4  text-center "
+                        2>Special Offers</a>
+
+                </div>
+
+                <hr class="m-1">
+            </div>
+        </div>
+        <!--  -->
+        <div class="sec flex justify-between gap-8 sticky top-0 w-full   bg-header items-center py-2 px-3 ">
+            <div class=" w-[200px] h-16  flex justify-center items-center  ">
+                <a href="#" class="logo w-full   bg-[url('./images/logo-imgg.jpg')] h-14 bg-cover bg-center"></a>
+            </div>
+
+
+            <span class="">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                    stroke="currentColor" class="size-6">
+                    <path stroke-linecap="round" stroke-linejoin="round"
+                        d="M3.75 5.25h16.5m-16.5 4.5h16.5m-16.5 4.5h16.5m-16.5 4.5h16.5" />
+                </svg>
+            </span>
+
+
+        </div>
+    </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
