--- a/Tailwind2/public/index.html
+++ b/Tailwind2/public/index.html
@@ -280,160 +280,63 @@
                 <hr class="m-1">
             </div>
         </div>
+
         <!--  -->
-        <div class="sec flex justify-between gap-8 sticky top-0 w-full   bg-header items-center py-2 px-3 ">
-            <div class=" w-[200px] h-16  flex justify-center items-center  ">
-                <a href="#" class="logo w-full   bg-[url('./images/logo-imgg.jpg')] h-14 bg-cover bg-center"></a>
+    </div>
+    <div class="sticky top-0 block md:hidden">
+        <div class="sec flex justify-between gap-8 sticky top-0 w-full bg-header   items-center py-2 px-4 ">
+            <div class=" w-[56] flex justify-start items-center  ">
+                <a href="#" class="logo w-56   bg-[url('./images/logo-imgg.jpg')] h-14 bg-cover bg-center"></a>
             </div>
 
 
-            <span class="">
+            <span class="toggler">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                    stroke="currentColor" class="size-6">
+                    stroke="currentColor" class="size-6 toggle  h-8 w-8">
                     <path stroke-linecap="round" stroke-linejoin="round"
-                        d="M3.75 5.25h16.5m-16.5 4.5h16.5m-16.5 4.5h16.5m-16.5 4.5h16.5" />
+                        d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
                 </svg>
+
             </span>
 
 
+        </div>
+        <hr class="m-1">
+    </div>
+    <div class="hide smallNav transition-all ease-in-out duration-700">
+        <div class="flex flex-col px-3 py-[20px] gap-[17.69px] ">
+            <span class="extra">HOME</span>
+            <span class="extra">DINNING</span>
+            <span class="extra">MEETING & EVENTS</span>
+            <span class="extra">RECREATIONAL SERVICE</span>
+            <span class="extra">BLOG</span>
+            <span class="extra">GALLERY</span>
+            <span class="extra">ABOUT US</span>
+            <span class="extra">CONTACT US</span>
         </div>
     </div>
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+    <!-- HeroBacgroud Slide -->
     <div
-        class="banner1 Hero  transition-all ease-in-out duration-700  h-[100vh] bg-[url('./images/eko1.jpg')] bg-cover bg-center">
+        class="banner1 Hero  transition-all ease-in-out duration-700 h-[50vh] md:h-[100vh] bg-[url('./images/eko1.jpg')] bg-cover bg-center">
 
-        <span class="arrows arrLeft absolute top-[408px] left-[23px]">
+        <span class="arrows arrLeft absolute top-[300px] md:top-[408px] left-[23px]">
             <i class="fa-solid fa-arrow-left"></i>
         </span>
 
-        <span class="arrows arrRight absolute top-[408px] right-[23px]"">
+        <span class="arrows arrRight absolute top-[300px] md:top-[408px] right-[23px]"">
             <i class=" fa-solid fa-arrow-right arrow"></i>
         </span>
 
     </div>
+    <!-- Hero Done -->
 
+    <!-- Bannerr3 -->
     <div class="banner3  bg-banner3  w-full py-[50px]">
         <div class="flex flex-col  gap-12 pt-2">
-            <div class="bechild  flex justify-around px-10 items-center ">
+            <div class="bechild  flex flex-col md:flex-row justify-around px-10 items-center gap-7 md:gap-0 ">
 
                 <div class="arriv  ">
                     <div class="child">
@@ -501,6 +404,7 @@
             </div>
         </div>
     </div>
+    <!-- Banner3 Done -->
     <br>
     <br>
     <br>
