placed smallDiv inside sticky div

--- a/Tailwind2/public/index.html
+++ b/Tailwind2/public/index.html
@@ -301,24 +301,23 @@
 
 
         </div>
-        <hr class="m-1">
-    </div>
-   <div class="  sticky z-40">
-    <div class="hide smallNav relative top-0  bg-header ">
-        <div class="flex flex-col px-3 py-[20px] gap-[17.69px] ">
-            <span class="extra">HOME</span>
-            <span class="extra">DINNING</span>
-            <span class="extra">MEETING & EVENTS</span>
-            <span class="extra">RECREATIONAL SERVICE</span>
-            <span class="extra">BLOG</span>
-            <span class="extra">GALLERY</span>
-            <span class="extra">ABOUT US</span>
-            <span class="extra">CONTACT US</span>
+        <hr class="">
+
+
+        <div class="hide smallNav relative  bg-header ">
+            <div class="flex flex-col px-3 py-[20px] gap-[17.69px] ">
+                <span class="extra">HOME</span>
+                <span class="extra">DINNING</span>
+                <span class="extra">MEETING & EVENTS</span>
+                <span class="extra">RECREATIONAL SERVICE</span>
+                <span class="extra">BLOG</span>
+                <span class="extra">GALLERY</span>
+                <span class="extra">ABOUT US</span>
+                <span class="extra">CONTACT US</span>
+            </div>
         </div>
     </div>
-
-   </div>
-
+   
 
     <!-- HeroBacgroud Slide -->
     <div
