--- a/Tailwind2/public/index.html
+++ b/Tailwind2/public/index.html
@@ -18,25 +18,28 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap"
         rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
 </head>
 
 <body class="">
     <!-- Big screen headers -->
-    <div class="bigheader bg-header hidden md:block  w-full py-1 ">
+    <div class="bigheader relative z-20 bg-header hidden md:block  w-full py-1 ">
         <div>
             <div class="first w-full  bg-header flex justify-between lg:px-12 px-8   items-center">
 
                 <div class="list1 deligate  flex justify-between  w-[56%] gap-1   items-center ">
-                    <span class="firstt ">
-                        <p class="linee">EKO GARDENS</p>
+                    <span class="firstt out ">
+                        <p class="linee ">EKO GARDENS</p>
 
                         <span class="svg">
                             <i class="fa-solid fa-chevron-down linee"></i>
                         </span>
-                        <span class="next absolute top-10 left-[56px] z-40 bg-header hidden p-4  ">
-                            <div class="next2 flex flex-col gap-4 justify-center ">
-                                <p class="linee">EKO GAURDING STANDARD</p>
-                                <p class="linee">EKO GAURDING CLASSIC</p>
+                        <span class="next absolute top-10 left-[56px] z-50 bg-header hidden py-4  ">
+                            <div class="next2 flex flex-col gap-3 justify-center ">
+                                <p class="linee lin">EKO GAURDING STANDARD</p>
+                                <p class="linee lin">EKO GAURDING CLASSIC</p>
                             </div>
                         </span>
                     </span>
@@ -49,13 +52,13 @@
                         <span class="svg">
                             <i class="fa-solid fa-chevron-down linee"></i>
                         </span>
-                        <span class="next absolute top-10 left-[204px] z-40 bg-header hidden  p-4 w-[250px]  ">
+                        <span class="next absolute top-10 left-[204px] z-40 bg-header hidden  py-4 w-[250px]  ">
                             <div class="next2 flex flex-col gap-7 justify-center ">
-                                <p class="linee">EKO CLASSIC SUPERIOR</p>
-                                <p class="linee">EKO ATLANTIC SUPERIRO</p>
-                                <p class="linee">CLASSIC SUITE</p>
-                                <p class="linee">DIPLOMATIC SUITE</p>
-                                <p class="linee">PRESCIDENTIAL SUITE</p>
+                                <p class="linee lin">EKO CLASSIC SUPERIOR</p>
+                                <p class="linee lin">EKO ATLANTIC SUPERIRO</p>
+                                <p class="linee lin">CLASSIC SUITE</p>
+                                <p class="linee lin">DIPLOMATIC SUITE</p>
+                                <p class="linee lin">PRESCIDENTIAL SUITE</p>
                             </div>
                         </span>
                     </span>
@@ -70,11 +73,11 @@
                         <span class="svg">
                             <i class="fa-solid fa-chevron-down linee"></i>
                         </span>
-                        <span class="next absolute top-10 left-[328px] z-40 bg-header hidden  p-4 w-[176px]  ">
+                        <span class="next absolute top-10 left-[328px] z-40 bg-header hidden  py-4 w-[176px]  ">
                             <div class="next2 flex flex-col gap-4 justify-center ">
-                                <p class="linee">DELUXE ROOM</p>
-                                <p class="linee">STUDIO SUITE</p>
-                                <p class="linee">EXECUTIVE SUITE</p>
+                                <p class="linee lin">DELUXE ROOM</p>
+                                <p class="linee lin">STUDIO SUITE</p>
+                                <p class="linee lin">EXECUTIVE SUITE</p>
                             </div>
                         </span>
                     </span>
@@ -88,13 +91,13 @@
                             <i class="fa-solid fa-chevron-down linee"></i>
                         </span>
 
-                        <span class="next absolute top-10 left-[456px] z-40 bg-header hidden  p-4 w-[270px]  ">
+                        <span class="next absolute top-10 left-[456px] z-40 bg-header hidden  py-4 w-[270px]  ">
                             <div class="next2 flex flex-col gap-7 justify-center ">
-                                <p class="linee">EKO CLASSIC SUPERIOR</p>
-                                <p class="linee">EKO ATLANTIC SUPERIRO</p>
-                                <p class="linee">CLASSIC SUITE</p>
-                                <p class="linee">DIPLOMATIC SUITE</p>
-                                <p class="linee">PRESCIDENTIAL SUITE</p>
+                                <p class="linee lin">EKO CLASSIC SUPERIOR</p>
+                                <p class="linee lin">EKO ATLANTIC SUPERIRO</p>
+                                <p class="linee lin">CLASSIC SUITE</p>
+                                <p class="linee lin">DIPLOMATIC SUITE</p>
+                                <p class="linee lin">PRESCIDENTIAL SUITE</p>
                             </div>
                         </span>
                     </span>
@@ -102,14 +105,6 @@
                         <p class="linee">Eko Tower II</p>
                     </span>
                 </div>
-
-
-
-
-
-
-
-
 
                 <div class="flex w-[40%] gap-1 lg:gap-0 justify-between ">
                     <div class="flex justify-start items-center  w-3/4   gap-4">
@@ -131,7 +126,7 @@
         </div>
     </div>
     <!--  -->
-    <div class=" sticky top-0 z-10 hidden md:block ">
+    <div class=" sticky top-0 boxx  hidden md:block ">
         <div class="sec flex justify-between gap-8   z-20  w-full   bg-header items-center lg:px-12 px-8 ">
             <div class="flex w-[38%] justify-start gap-5 ">
 
@@ -248,51 +243,13 @@
 
     </div>
     <!-- Big screen headers Done-->
+    <!-- ******************************************** -->
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    <!-- small screen headers needes edit -->
+    <!-- small screen headers  -->
     <div class="head1 block md:hidden ">
         <div class="bigheader  flex flex-col gap-5  w-full py-2 ">
             <div>
-                <div class="first w-full  bg-header flex justify-between px-4   items-center">
+                <div class="first w-full relative  bg-header flex justify-between px-4   items-center">
                     <span class="firstt gap-1">
                         <p class=" line1 text-[15px]">Our Hotel</p>
 
@@ -322,7 +279,7 @@
 
         <!--  -->
     </div>
-    <div class="sticky top-0 z-10 block md:hidden">
+    <div class="sticky top-0 z-10 boxx block md:hidden">
         <div class="sec flex justify-between gap-8 sticky top-0 w-full bg-header   items-center py-2 px-4 ">
             <div class=" w-[56] flex justify-start items-center  ">
                 <a href="#" class="logo w-56   bg-[url('./images/logo-imgg.jpg')] h-14 bg-cover bg-center"></a>
@@ -345,18 +302,20 @@
 
         <div class="hide smallNav relative  bg-header ">
             <div class="flex flex-col px-3 py-[20px] gap-[17.69px] ">
-                <span class="extra">HOME</span>
-                <span class="extra">DINNING</span>
-                <span class="extra">MEETING & EVENTS</span>
-                <span class="extra">RECREATIONAL SERVICE</span>
-                <span class="extra">BLOG</span>
-                <span class="extra">GALLERY</span>
-                <span class="extra">ABOUT US</span>
-                <span class="extra">CONTACT US</span>
+                <span class="extra linee">HOME</span>
+                <span class="extra linee">DINNING</span>
+                <span class="extra linee">MEETING & EVENTS</span>
+                <span class="extra linee">RECREATIONAL SERVICE</span>
+                <span class="extra linee">BLOG</span>
+                <span class="extra linee">GALLERY</span>
+                <span class="extra linee">ABOUT US</span>
+                <span class="extra linee">CONTACT US</span>
             </div>
         </div>
     </div>
-   
+    <!-- small screen headers Done -->
+    <!-- ******************************************** -->
+
 
     <!-- HeroBacgroud Slide -->
     <div
@@ -372,8 +331,9 @@
 
     </div>
     <!-- Hero Done -->
+    <!-- ******************************************** -->
 
-    <!-- Bannerr3 -->
+    <!-- Banner3 -->
     <div class="banner3  bg-banner3  w-full py-[50px]">
         <div class="flex flex-col  gap-12 pt-2">
             <div class="bechild  flex flex-col md:flex-row justify-around px-10 items-center gap-7 md:gap-0 ">
@@ -445,26 +405,42 @@
         </div>
     </div>
     <!-- Banner3 Done -->
-    <br>
-    <br>
-    <br>
-    <br>
-    <div class="flex text-5xl  justify-center items-center">
+    <!-- ******************************************** -->
+
+    <!-- Banner4-->
+    <div class="banner4 bg-header px-12 pt-[70px] pb-1">
+        <div class="pt-5 px-5 pb-8 flex justify-center items-center gap-6 flex-col">
+            <div class="flex welcome justify-center items-center ">
+                <p class="text-headerBtnText"><span class="text-darkText">Welcome to</span> Eko Hotels & Suites</p>
+            </div>
+            <span class="flex flex-col w-full justify-center gap-[3px] items-center">
+                <hr class="w-[50px]  h-[2px] font-thin  bg-headerBtnText">
+                <hr class="w-[200px]  h-[2px] font-thin   bg-headerBtnText">
+                <hr class="w-[50px]  h-[2px] font-thin  bg-headerBtnText">
+            </span>
+        </div>
+    </div>
+    <!-- Banner4 Done-->
+    <!-- ******************************************** -->
+
+    <div class="flex text-5xl  justify-center items-center bg-slate-500">
         <h1 class="text-5xl text-center ">Moore de come. Make i rest small abeg🥱</h1>
     </div>
+    <br><br>
+    <br>
+    <br>
+    <br><br>
+    <br>
+    <br>
+    <br><br>
     <br>
     <br>
     <br>
     <br>
     <br>
     <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
+
+
 
     <script src="index.js"></script>
 </body>
