added grid items to banner 5

--- a/Tailwind2/public/index.html
+++ b/Tailwind2/public/index.html
@@ -485,19 +485,37 @@
     <!-- ******************************************** -->
 
     <!-- Banner5-->
-    <div class="banner5 bg-banner5 py-10 px-4">
+    <div class="banner5 bg-banner5 py-10 px-12">
 
 
-
-
-        <div class="griddiv grid ">
-            <div class="frame"></div>
-            <div class="frame"></div>
-            <div class="frame"></div>
-            <div class="frame"></div>
+        <div class="  flex-wrap px-4 pb-8 flex justify-center items-center gap-6 flex-col">
+            <div class="flex welcome text-[32px] w-full md:text-[42px] justify-center items-center ">
+                <p class="text-headerBtnText "><span class="text-darkText">our</span>Hotels</p>
+            </div>
+            <span class="flex flex-col w-full justify-center gap-[3px] items-center">
+                <hr class="w-[50px]  h-[2px] font-thin  bg-headerBtnText">
+                <hr class="w-[200px]  h-[2px] font-thin   bg-headerBtnText">
+                <hr class="w-[50px]  h-[2px] font-thin  bg-headerBtnText">
+            </span>
         </div>
-
     </div>
+
+    <div class="griddiv grid grid-cols-2 bg-banner5 px-12">
+        <div class="frame">
+            <div class="fchild  bg-black"></div>
+        </div>
+        <div class="frame ">
+            <div class="fchild bg-red-500"></div>
+        </div>
+        <div class="frame ">
+            <div class="fchild bg-yellow-200"></div>
+        </div>
+        <div class="frame ">
+            <div class="fchild bg-slate-300"></div>
+        </div>
+    </div>
+
+    
 
 
 
