added toggle functions to down icons in bannere3 and fixed tailwind scoped media query of banner7

--- a/Tailwind2/public/index.html
+++ b/Tailwind2/public/index.html
@@ -25,7 +25,7 @@
 
 <body class="">
     <!-- Big screen headers -->
-    <div class="bigheader relative z-20 bg-header hidden md:block  w-full py-1 ">
+    <div class="bigheader  relative z-20 bg-header hidden md:block  w-full py-1 ">
         <div>
             <div class="first w-full  bg-header flex justify-between lg:px-12 px-8   items-center">
 
@@ -313,7 +313,7 @@
             </div>
         </div>
     </div>
-    <!-- small screen headers Done -->
+    <!-- small screen Done -->
     <!-- ******************************************** -->
 
 
@@ -334,7 +334,7 @@
     <!-- ******************************************** -->
 
     <!-- Banner3 -->
-    <div class="banner3  bg-banner3  w-full py-[50px]">
+    <div class="banner3  bg-banner3  w-full py-[55px]">
         <div class="flex flex-col  gap-12 pt-2">
             <div class="bechild  flex flex-col md:flex-row justify-around px-10 items-center gap-7 md:gap-0 ">
 
@@ -371,10 +371,19 @@
                             ADULTS
 
                         </p>
-                        <p class="pikin2 ">
-                            <span class="text-white">Choose Adult</span>
-                            <span class="text-white  text-[16px]"><i class="fa-solid fa-chevron-down"></i></span>
-                        </p>
+
+                        <span class=" pikk  text-[25px]">Choose Adult</span>
+                        <span class=" pikk text-[16px] togglee cursor-pointer"><i
+                                class="fa-solid fa-chevron-down"></i></span>
+                        <div class="relative arriveV hidden ">
+                            <span class="next w-[210px]  absolute top-0 -left-4 mt-2 z-50 bg-header  py-2  ">
+                                <div class="next2 flex flex-col gap-2 items-start px-3">
+                                    <p class="linee lin">ADULT</p>
+                                    <p class="linee lin">ADULT1</p>
+                                    <p class="linee lin">ADULT2</p>
+                                </div>
+                            </span>
+                        </div>
                     </div>
 
                 </div>
@@ -382,15 +391,25 @@
 
                 <div class="arriv ">
 
-                    <div class="child">
+                    <div class="child ">
                         <p class="pikin1">
                             CHILDREN
 
                         </p>
-                        <p class="pikin2 ">
-                            <span class="text-white ">0Child</span>
-                            <span class=" text-white text-[16px]"><i class="fa-solid fa-chevron-down"></i></span>
-                        </p>
+
+                        <span class="text-white text-[25px] pikk  ">0Child</span>
+                        <span class=" pikk togglee text-white text-[16px]  cursor-pointer"><i
+                                class="fa-solid fa-chevron-down"></i></span>
+                        <div class="relative arriveV  hidden  ">
+                            <span class="next w-[210px]  absolute top-0 -left-11 mt-2 z-50 bg-header  py-2  ">
+                                <div class="next2 flex flex-col gap-2 items-start px-3">
+                                    <p class="linee lin">CHILD1</p>
+                                    <p class="linee lin">CHILD2</p>
+                                    <p class="linee lin">CHILD3</p>
+                                </div>
+                            </span>
+                        </div>
+
                     </div>
 
                 </div>
@@ -406,6 +425,7 @@
     </div>
     <!-- Banner3 Done -->
     <!-- ******************************************** -->
+
 
     <!-- Banner4-->
     <div class="banner4">
@@ -704,32 +724,28 @@
         </div>
 
     </div>
+    <!-- Banner5 Done-->
+    <!-- ******************************************* -->
 
 
+    <!-- Banner6 -->
     <div class="banner6 bg-banner6 w-full px-5 md:px-10 pt-8 pb-14">
-        <div class="parent">
-            <div class="pchild flex flex-col justify-center items-center gap-6 ">
 
-                <div class="flex welcome text-[32px] w-full md:text-[42px] justify-center items-center ">
-                    <p class="text-headerBtnText "><span class="text-white ">Recreational</span>Services</p>
-                </div>
+        <div class="pchild flex flex-col justify-center items-center gap-6 py-3 md:py-9 ">
 
-                <span class="flex flex-col w-full justify-center gap-[3px] items-center">
-                    <hr class="w-[50px]  h-[2px] font-thin  bg-headerBtnText">
-                    <hr class="w-[200px]  h-[2px] font-thin   bg-headerBtnText">
-                    <hr class="w-[50px]  h-[2px] font-thin  bg-headerBtnText">
-                </span>
-
+            <div class="flex welcome text-[32px] w-full md:text-[42px] justify-center items-center ">
+                <p class="text-headerBtnText "><span class="text-white ">Recreational</span>Services</p>
             </div>
-            <div class="pchild">
 
-            </div>
+            <span class="flex flex-col w-full justify-center gap-[3px] items-center">
+                <hr class="w-[50px]  h-[2px] font-thin  bg-headerBtnText">
+                <hr class="w-[200px]  h-[2px] font-thin   bg-headerBtnText">
+                <hr class="w-[50px]  h-[2px] font-thin  bg-headerBtnText">
+            </span>
+
         </div>
 
-
-
-
-        <div class="px-0 md:px-5 py-3">
+        <div class="px-0 md:px-5 py-3 md:py-0 ">
             <div class="container pt-0 pb-8  w-full ">
                 <div class="slider_wrapper overflow-hidden relative w-full flex justify-center items-center">
                     <div class="slides w-full flex gap-0 md:gap-2   transition-transform duration-500 ease-in-out">
@@ -781,11 +797,7 @@
                                 </div>
                             </div>
                         </div>
-
-
-
-
-
+                        <!--  -->
                         <div class="slide  ">
                             <div class=" things  bg  ">
 
@@ -808,9 +820,7 @@
                                 </div>
                             </div>
                         </div>
-
-
-
+                        <!--  -->
                         <div class="slide  ">
                             <div class=" things    ">
 
@@ -834,10 +844,7 @@
                                 </div>
                             </div>
                         </div>
-
-
-
-
+                        <!--  -->
                         <div class="slide  ">
                             <div class=" things   ">
 
@@ -866,11 +873,229 @@
                 </div>
 
                 <!-- Dots for navigation -->
-                <div class="dots flex justify-center mt-4 space-x-2">
+                <div class="dots flex justify-center mt-4 md:mt-8 space-x-2">
                     <div class=" dotParent pt-2 flex justify-center gap-2">
                         <button class="dot w-[10px] h-[10px] bg-gray-300 rounded-full" data-slide="0"></button>
                         <button class="dot w-[10px] h-[10px] bg-gray-300 rounded-full" data-slide="1"></button>
                         <button class="dot w-[10px] h-[10px] bg-gray-300 rounded-full" data-slide="2"></button>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
+    <!-- Banner6 -->
+    <!-- ************************************* -->
+
+    <!-- Banner7 -->
+    <div class="banner7 bg-banner7 py-3 md:py-14 px-2 md:px-3">
+
+        <div class="pchild flex flex-col justify-center items-center gap-6 py-3 md:py-9 ">
+
+            <div class="flex welcome text-[32px] w-full md:text-[42px] justify-center items-center ">
+                <p class="text-black "><span class="text-headerBtnText ">EKO </span>Services</p>
+            </div>
+
+            <span class="flex flex-col w-full justify-center gap-[3px] items-center">
+                <hr class="w-[50px]  h-[2px] font-thin  bg-headerBtnText">
+                <hr class="w-[200px]  h-[2px] font-thin   bg-headerBtnText">
+                <hr class="w-[50px]  h-[2px] font-thin  bg-headerBtnText">
+            </span>
+
+        </div>
+
+        <div class="Aflex flex justify-center  flex-col md:flex-row items-start justify-items-stretch px-2 gap-5">
+            <div class="Aflextchild  Aflextchi">
+                <div class="mge bg-[url('./images/sky-restaurant.jpg')] bg-center bg-cover">
+
+                </div>
+                <div class="skyA">
+                    <div class="sky flex flex-col gap-3">
+                        <span class="skychldd">
+                            THE SKY RESTAURANT
+                        </span>
+                        <p class="skychld">
+                            Situated at the tallest Penthouse of Eko Hotel, the Sky Restaurant has a 'wow' factor that
+                            is
+                            hard to dispute. It's a...
+                        </p>
+                        <div class="skychlda  ">
+                            <a href="#" class=" flex justify-start ana  w-full gap-1  ">
+                                <p class="got">
+                                    Read More
+                                </p>
+                                <span class="got">
+                                    <i class="fa-solid fa-arrow-right"></i>
+                                </span>
+                            </a>
+                            <p class="pla"></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!--  -->
+            <div class="Aflextchild  Aflextchi">
+                <div class="mge  bg-[url('./images/88-restaurant.jpg')] bg-center bg-cover">
+
+                </div>
+                <div class="skyA">
+                    <div class="sky flex flex-col gap-3">
+                        <span class="skychldd">
+                            ATARODO
+                        </span>
+                        <p class="skychld">
+                            The Atarodo is an infusion of afro-centric food culture. The menu is the brain-child of our
+                            British Nigerian c...
+                        </p>
+                        <div class="skychlda  ">
+                            <a href="#" class=" flex justify-start ana  w-full gap-1  ">
+                                <p class="got">
+                                    Read More
+                                </p>
+                                <span class="got">
+                                    <i class="fa-solid fa-arrow-right"></i>
+                                </span>
+                            </a>
+                            <p class="pla"></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!--  -->
+            <div class="w-full md:w-[24%] h-[479px] bg-white Aflextchi">
+                <div class="mge  bg-[url('./images/lagoon-breeze.jpg')] bg-center bg-cover">
+
+                </div>
+                <div class="skyA">
+                    <div class="sky flex flex-col gap-3">
+                        <span class="skychldd">
+                            LAGOON BREEZE
+                        </span>
+                        <p class="skychld">
+                            Located by the swimming pool, the Lagoon Breeze Restaurant is loved by those who know Lagos
+                            and
+                            appreciate nicely pre...
+                        </p>
+                        <div class="skychlda  ">
+                            <a href="#" class=" flex justify-start ana  w-full gap-1  ">
+                                <p class="got">
+                                    Read More
+                                </p>
+                                <span class="got">
+                                    <i class="fa-solid fa-arrow-right"></i>
+                                </span>
+                            </a>
+                            <p class="pla"></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!--  -->
+            <div class="hidden md:block w-[24%]">
+                <div class=" w-full  h-[510px] flex justify-center items-center  Aflextchi  ">
+                    <p class="bigText -rotate-90 px-1 text-center text-headerBtnText uppercase">
+                        Dining
+                    </p>
+
+
+                </div>
+            </div>
+        </div>
+        <!-- ******************************************************* -->
+        <div class="Aflex flex justify-center flex-col md:flex-row items-start justify-items-stretch px-2 gap-5">
+            <!--  -->
+            <div class="hidden md:block w-[24%]">
+                <div class=" w-full flex justify-center items-center  ">
+                    <p class="bigText -rotate-90 px-1 text-center text-headerBtnText uppercase">
+                        Dining
+                    </p>
+
+
+                </div>
+            </div>
+            <!--  -->
+            <div class="Aflextchild  Aflextchi">
+                <div class="mge bg-[url('./images/sky-restaurant.jpg')] bg-center bg-cover">
+
+                </div>
+                <div class="skyA">
+                    <div class="sky flex flex-col gap-3">
+                        <span class="skychldd">
+                            THE SKY RESTAURANT
+                        </span>
+                        <p class="skychld">
+                            Situated at the tallest Penthouse of Eko Hotel, the Sky Restaurant has a 'wow' factor that
+                            is
+                            hard to dispute. It's a...
+                        </p>
+                        <div class="skychlda  ">
+                            <a href="#" class=" flex justify-start ana  w-full gap-1  ">
+                                <p class="got">
+                                    Read More
+                                </p>
+                                <span class="got">
+                                    <i class="fa-solid fa-arrow-right"></i>
+                                </span>
+                            </a>
+                            <p class="pla"></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!--  -->
+            <div class="Aflextchild  Aflextchi">
+                <div class="mge  bg-[url('./images/88-restaurant.jpg')] bg-center bg-cover">
+
+                </div>
+                <div class="skyA">
+                    <div class="sky flex flex-col gap-3">
+                        <span class="skychldd">
+                            ATARODO
+                        </span>
+                        <p class="skychld">
+                            The Atarodo is an infusion of afro-centric food culture. The menu is the brain-child of our
+                            British Nigerian c...
+                        </p>
+                        <div class="skychlda  ">
+                            <a href="#" class=" flex justify-start ana  w-full gap-1  ">
+                                <p class="got">
+                                    Read More
+                                </p>
+                                <span class="got">
+                                    <i class="fa-solid fa-arrow-right"></i>
+                                </span>
+                            </a>
+                            <p class="pla"></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!--  -->
+            <div class=" w-full md:w-[24%] h-[479px] bg-white Aflextchi">
+                <div class="mge  bg-[url('./images/lagoon-breeze.jpg')] bg-center bg-cover">
+
+                </div>
+                <div class="skyA">
+                    <div class="sky flex flex-col gap-3">
+                        <span class="skychldd">
+                            LAGOON BREEZE
+                        </span>
+                        <p class="skychld">
+                            Located by the swimming pool, the Lagoon Breeze Restaurant is loved by those who know Lagos
+                            and
+                            appreciate nicely pre...
+                        </p>
+                        <div class="skychlda  ">
+                            <a href="#" class=" flex justify-start ana  w-full gap-1  ">
+                                <p class="got">
+                                    Read More
+                                </p>
+                                <span class="got">
+                                    <i class="fa-solid fa-arrow-right"></i>
+                                </span>
+                            </a>
+                            <p class="pla"></p>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -885,6 +1110,14 @@
 
 
 
+    </div>
+    <!-- Banner7 Done -->
+    <!-- *************************************** -->
+
+
+
+
+
 
 
 
@@ -893,19 +1126,10 @@
     <div class="flex text-5xl  mt-5 justify-center items-center bg-slate-500">
         <h1 class="text-5xl text-center ">Moore de come. Make i rest small abeg🥱</h1>
     </div>
-    <br><br>
-    <br>
-    <br>
-    <br><br>
-    <br>
-    <br>
-    <br><br>
     <br>
     <br>
     <br>
-    <br>
-    <br>
-    <br>
+
 
 
 
